# innovation_hub_agent

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: pr-review-bot.yml
docs/: AGENT_ARCHITECTURE.md
src/: main.py
src/agent/: config.py  core.py  prompts.py  tools.py
src/api/: app.py  deps.py  schemas.py
src/api/routes/: chat.py
src/api/static/: index.html
src/monitoring/: langfuse.py
src/utils/: github_api.py  logger.py  wiki_fs.py
tests/: conftest.py  e2e_report.md  e2e_test.py  test_agent.py  test_api.py  test_auth.py  test_health.py  test_langfuse.py  test_tools.py  test_wiki_fs.py
