[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "innovation_hub_agent"
version = "0.1.0"
description = "AI Agent that reads the Innovation Hub Wiki and answers questions using ReAct pattern with LangGraph"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-openai>=0.3.0",
    "langchain-core>=0.3.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
innovation-agent = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
